feat: add development delete an user for a space
